k8s/overlays/prod/patches/replicas-and-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: bff
          resources:
            requests:
              cpu: 300m
              memory: 384Mi
            limits:
              cpu: 700m
              memory: 768Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: user-service
          resources:
            requests:
              cpu: 300m
              memory: 384Mi
            limits:
              cpu: 700m
              memory: 768Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: message-service
          resources:
            requests:
              cpu: 300m
              memory: 384Mi
            limits:
              cpu: 700m
              memory: 768Mi
