k8s/overlays/prod/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messager
spec:
  rules:
    - host: messager.example.com
